Release v2.1.2-pre-ga: Dependency updates and test fixes
- Updated JUnit from 5.10.1 to 5.12.0 (latest stable)
- Updated AWS SDK from 2.41.5 to 2.41.7 (latest patch)
- Updated test-scope dependencies (SLF4J, Commons Lang3, Jackson, HttpClient5)
- Fixed test failures after dependency updates
- Fixed S3 test to use FakeS3Client instead of real AWS credentials
- Added Main-Class support to Java 21 version of JarzClassLoader
- All 190 tests passing (1 skipped)

Test Results:
- jarz-core: 106/106 passing
- jarz-tools: 45/45 passing
- jarz-s3: 7/7 passing
- jarz-cdn: 28/28 passing
- All modules: BUILD SUCCESS

Synced from private repo tag v2.1.2-pre-ga