@@ -3,12 +3,15 @@ package jdk.incubator.jarz.classloader;
 import jdk.incubator.jarz.v2.BlockReader;
 import jdk.incubator.jarz.v2.JarzDataProvider;
 import jdk.incubator.jarz.v2.HttpJarzDataProvider;
+import jdk.incubator.jarz.v2.FileJarzDataProvider;
 import jdk.incubator.jarz.v2.JarzLocalIndex;
+import jdk.incubator.jarz.v2.JarzLocalIndex.JarzBundleIndex;
 
 import java.io.*;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.*;
@@ -47,6 +50,9 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
     protected final ProtectionDomain protectionDomain;
     protected final URL codeSource;
     protected final JarzDataProvider dataProvider;
+    
+    // Main-Class support (optional for library vs application loading)
+    private final String mainClassName; // null for library loading
     
     // Bundle index support for multi-JARZ class loading
     protected JarzLocalIndex.JarzBundleIndex bundleIndex;
@@ -179,6 +185,10 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
             this.codeSource = jarzFile.toUri().toURL();
             this.protectionDomain = ProtectionDomainFactory.getProtectionDomain(codeSource);
             this.classpathResolver = createClasspathResolver(jarzFile.getParent(), jarzFile);
+            
+            // Extract Main-Class (optional for library loading)
+            String mainClass = manifest.getMainAttributes().getValue("Main-Class");
+            this.mainClassName = (mainClass != null && !mainClass.trim().isEmpty()) ? mainClass.trim() : null;
         } catch (Exception e) {
             try { close(); } catch (IOException ignored) {}
             if (e instanceof IOException) {
@@ -212,6 +222,10 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
             this.codeSource = new URL("file", null, -1, "/remote-jarz");
             this.protectionDomain = ProtectionDomainFactory.getProtectionDomain(codeSource);
             this.classpathResolver = null; // No classpath resolution for remote sources
+            
+            // Extract Main-Class (optional for library loading)
+            String mainClass = manifest.getMainAttributes().getValue("Main-Class");
+            this.mainClassName = (mainClass != null && !mainClass.trim().isEmpty()) ? mainClass.trim() : null;
         } catch (Exception e) {
             try { close(); } catch (IOException ignored) {}
             if (e instanceof IOException) {
@@ -238,18 +252,32 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
         
         try {
             this.dataProvider = dataProvider;
-            this.jarzFilePath = null; // May not have local file path for remote sources
-            this.blockReader = new BlockReader(dataProvider);
+            this.blockReader = BlockReaderPool.acquire(dataProvider);
             this.manifest = readManifestFromDataProvider();
             
-            // For remote sources, create a synthetic URL with a valid protocol
-            this.codeSource = new URL("file", null, -1, "/remote-jarz");
-            this.protectionDomain = ProtectionDomainFactory.getProtectionDomain(codeSource);
-            this.classpathResolver = null; // No classpath resolution for remote sources
+            // Handle different data provider types
+            if (dataProvider instanceof FileJarzDataProvider) {
+                // For file-based sources, enable classpath resolution
+                FileJarzDataProvider fileProvider = (FileJarzDataProvider) dataProvider;
+                this.jarzFilePath = fileProvider.getFilePath();
+                this.codeSource = jarzFilePath.toUri().toURL();
+                this.protectionDomain = ProtectionDomainFactory.getProtectionDomain(codeSource);
+                this.classpathResolver = createClasspathResolver(jarzFilePath.getParent(), jarzFilePath);
+            } else {
+                // For remote sources, no classpath resolution
+                this.jarzFilePath = null;
+                this.codeSource = new URL("file", null, -1, "/remote-jarz");
+                this.protectionDomain = ProtectionDomainFactory.getProtectionDomain(codeSource);
+                this.classpathResolver = null;
+            }
             
-            // Load bundle index if provided
+            // Extract Main-Class (optional for library loading)
+            String mainClass = manifest.getMainAttributes().getValue("Main-Class");
+            this.mainClassName = (mainClass != null && !mainClass.trim().isEmpty()) ? mainClass.trim() : null;
+            
+            // Load index if provided (detect format automatically)
             if (bundleIndexPath != null && Files.exists(bundleIndexPath)) {
-                this.bundleIndex = JarzLocalIndex.loadBundle(bundleIndexPath);
+                this.bundleIndex = loadIndexFile(bundleIndexPath);
             }
         } catch (Exception e) {
             try { close(); } catch (IOException ignored) {}
@@ -257,6 +285,33 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
                 throw (IOException) e;
             }
             throw new IOException("Failed to initialize JARZ ClassLoader", e);
+        }
+    }
+    
+    /**
+     * Load index file, automatically detecting format (JIDX or JBDX).
+     */
+    private JarzBundleIndex loadIndexFile(Path indexPath) throws IOException {
+        // First, peek at magic bytes to detect format
+        String magicStr;
+        try (FileInputStream fis = new FileInputStream(indexPath.toFile());
+             BufferedInputStream bis = new BufferedInputStream(fis)) {
+            
+            byte[] magic = new byte[4];
+            bis.readNBytes(magic, 0, 4);
+            magicStr = new String(magic, StandardCharsets.UTF_8);
+        }
+        
+        // Load based on detected format
+        if ("JIDX".equals(magicStr)) {
+            // JarzLocalIndex format - load and convert to bundle index
+            JarzLocalIndex localIndex = JarzLocalIndex.load(indexPath);
+            return localIndex.toBundleIndex();
+        } else if ("JBDX".equals(magicStr)) {
+            // JarzBundleIndex format - load directly
+            return JarzLocalIndex.loadBundle(indexPath);
+        } else {
+            throw new IOException("Unknown index format: " + magicStr);
         }
     }
     
@@ -298,16 +353,59 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
         }
         
         List<Path> jarzEntries = new ArrayList<>();
+        Set<Path> visited = new HashSet<>();
+        visited.add(currentJarzFile.normalize().toAbsolutePath());
+        
         for (String entry : classPath.trim().split("\\s+")) {
             if (entry.isEmpty()) continue;
             
             Path entryPath = baseDir.resolve(entry);
             if (Files.exists(entryPath) && Files.isReadable(entryPath) && entry.endsWith(".jarz")) {
+                // Check for circular dependency
+                checkCircularDependency(entryPath, visited, new HashSet<>());
                 jarzEntries.add(entryPath);
             }
         }
         
         return jarzEntries.isEmpty() ? null : new JarzClasspathResolver(jarzEntries, currentJarzFile);
+    }
+    
+    private void checkCircularDependency(Path jarzFile, Set<Path> visited, Set<Path> currentPath) throws IOException {
+        Path normalizedPath = jarzFile.normalize().toAbsolutePath();
+        
+        if (currentPath.contains(normalizedPath)) {
+            throw new IOException("Circular dependency detected: " + jarzFile.getFileName());
+        }
+        
+        if (visited.contains(normalizedPath)) {
+            return; // Already checked
+        }
+        
+        currentPath.add(normalizedPath);
+        visited.add(normalizedPath);
+        
+        try (BlockReader reader = BlockReaderPool.acquire(jarzFile)) {
+            byte[] manifestData = reader.readEntry("META-INF/MANIFEST.MF");
+            if (manifestData != null) {
+                Manifest entryManifest = new Manifest(new ByteArrayInputStream(manifestData));
+                String entryClassPath = entryManifest.getMainAttributes().getValue("Class-Path");
+                if (entryClassPath != null && !entryClassPath.trim().isEmpty()) {
+                    Path baseDir = jarzFile.getParent();
+                    for (String entry : entryClassPath.trim().split("\\s+")) {
+                        if (entry.isEmpty() || !entry.endsWith(".jarz")) continue;
+                        
+                        Path entryPath = baseDir.resolve(entry);
+                        if (Files.exists(entryPath) && Files.isReadable(entryPath)) {
+                            checkCircularDependency(entryPath, visited, new HashSet<>(currentPath));
+                        }
+                    }
+                }
+            }
+        } finally {
+            BlockReaderPool.release(jarzFile);
+        }
+        
+        currentPath.remove(normalizedPath);
     }
     
     /**
@@ -317,6 +415,34 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
      */
     public Manifest getManifest() {
         return manifest;
+    }
+    
+    /**
+     * Returns the Main-Class attribute from the manifest, if present.
+     * 
+     * <p>This method returns the fully qualified name of the main class
+     * as specified in the manifest's Main-Class attribute. Returns null
+     * if no Main-Class is specified (library loading scenario).
+     * 
+     * @return the fully qualified main class name, or null if not specified
+     * @since 1.0
+     */
+    public String getMainClassName() {
+        return mainClassName;
+    }
+    
+    /**
+     * Returns true if this JARZ archive has a Main-Class attribute.
+     * 
+     * <p>This method can be used to determine if the JARZ archive is
+     * intended for application loading (has Main-Class) or library
+     * loading (no Main-Class).
+     * 
+     * @return true if Main-Class is present, false otherwise
+     * @since 1.0
+     */
+    public boolean hasMainClass() {
+        return mainClassName != null;
     }
     
     @Override
@@ -489,6 +615,15 @@ public abstract class JarzClassLoader extends SecureClassLoader implements AutoC
         if (jarzFilePath != null) {
             try {
                 BlockReaderPool.release(jarzFilePath);
+            } catch (IOException e) {
+                if (firstException == null) {
+                    firstException = e;
+                }
+            }
+        } else if (dataProvider != null) {
+            // Release via data provider for remote sources
+            try {
+                BlockReaderPool.release(dataProvider);
             } catch (IOException e) {
                 if (firstException == null) {
                     firstException = e;
